kubeops/config-syncer-secret-generation-from-rancher-capi/01-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeops-cluster-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubed
