kubeops/config-syncer-secret-generation-from-rancher-capi/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: config-syncer-secret-generation-from-rancher-capi
status:
  ready: true
